--- a/style.css
+++ b/style.css
@@ -8,21 +8,21 @@
   width: 400px;
   display: flex;
   flex-wrap: wrap;
-  background-color: #dcd6bc;
+  background-color: #ccccc8;
   margin-left: 50px;
   margin-top: 20px;
-  border: 10px solid #dcd6bc;
+  border: 10px solid #ccccc8;
   margin-bottom: 10px;
 }
 
 div {
   font-size: 25px;
   text-align: center;
-  font-family: 'Roboto Mono', monospace;
-
+  font-family: 'Press Start 2P', cursive;
 }
 
-.valid {
+.valid,
+.bomb {
   height: 40px;
   width: 40px;
   border: 5px solid;
@@ -36,14 +36,6 @@ div {
   border: 2px solid;
   background-color: #cecab7;
   border-color: #9c998d;
-  box-sizing: border-box;
-}
-
-.bomb {
-  height: 40px;
-  width: 40px;
-  border: 5px solid;
-  border-color: #f5f3eb #bab7a9 #bab7a9 #fff9db;
   box-sizing: border-box;
 }
 
